# HoughTransform

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
src/houghtransform/: hough_detector.py
tests/: test_hough_detector.py
