[tool.poetry]
name = "HoughTransform"
version = "0.1.0"
description = "Hough transform project"
authors = ["Lhesnor <78680731+Lhesnor@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.scripts]
detector = "houghtransform.hough_detector:main"
[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
opencv-python = "^4.10.0.84"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
