[tool.poetry]
name = "HoughTransform"
version = "0.1.0"
description = "Hough transform project"
authors = ["Lhesnor <78680731+Lhesnor@users.noreply.github.com>"]

[tool.poetry.scripts]
detector = "houghtransform.hough_detector:main"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
opencv-python = "^4.10.0.84"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
coverage = {extras = ["toml"], version = "^7.6.2"}
pytest-cov = "^5.0.0"
nox = "^2024.10.9"
flake8 = "^7.1.1"
black = "^24.10.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["houghtransform"]

[tool.coverage.report]
show_missing = true
fail_under = 80
